@@ -1,4 +1,6 @@
 ver 0.15.7 (2009/??/??)
+* input:
+  - file: don't fall back to parent directory
 * tags:
   - id3: fix ID3v1 charset conversion
 * decoders:
